Add UPDATE DELETE SEARCH methods to employee,supplier,product and add items to the tables and combobox with selectionmode